[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowguard"
version = "0.1.0"
description = "Security tool for verifying Python package integrity"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Dr. Shadow" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
shadowguard = "shadowguard.main:main"  
